--- a/app/src/main/res/layout/activity_edit_credit.xml
+++ b/app/src/main/res/layout/activity_edit_credit.xml
@@ -3,7 +3,8 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+    tools:ignore="LabelFor">
 
     <include
         android:layout_width="match_parent"
@@ -38,15 +39,15 @@
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:hint="@string/ent_account">
 
                     <EditText
                         android:id="@+id/textViewAccount"
                         style="@style/NotEditableEditText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="none|textNoSuggestions"
-                        android:hint="@string/ent_account"/>
+                        android:inputType="none|textNoSuggestions" />
                 </android.support.design.widget.TextInputLayout>
 
             </LinearLayout>
@@ -66,14 +67,14 @@
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@+id/imageButtonDeleteCategory">
+                    android:layout_toLeftOf="@+id/imageButtonDeleteCategory"
+                    android:hint="@string/ent_category">
 
                     <EditText
                         android:id="@+id/textViewCategory"
                         style="@style/NotEditableEditText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/ent_category"
                         android:inputType="textMultiLine|textNoSuggestions"/>
                 </android.support.design.widget.TextInputLayout>
 
@@ -91,14 +92,14 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:hint="@string/ent_comment">
 
                 <EditText
                     android:id="@+id/editTextComment"
                     style="@style/EditableEditText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/ent_comment"/>
+                    android:layout_height="wrap_content"/>
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
     </ScrollView>
