--- a/app/src/main/res/layout/fragment_simpledebt_edit.xml
+++ b/app/src/main/res/layout/fragment_simpledebt_edit.xml
@@ -18,14 +18,14 @@
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:hint="@string/ent_name">
 
             <EditText
                 android:id="@+id/edit_text_name"
                 style="@style/EditableEditText"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/ent_name"/>
+                android:layout_height="wrap_content"/>
         </android.support.design.widget.TextInputLayout>
 
         <com.yoshione.fingen.widgets.AmountEditor
