--- a/app/src/main/res/layout/widget_amount_edit_2.xml
+++ b/app/src/main/res/layout/widget_amount_edit_2.xml
@@ -29,7 +29,8 @@
             android:layout_weight="1"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toEndOf="@+id/imagebutton_amount_sign"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            android:hint="@string/ent_amount">
 
             <EditText
                 android:id="@+id/edittext_amount"
@@ -38,7 +39,6 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="0dp"
                 android:gravity="end"
-                android:hint="@string/ent_amount"
                 android:inputType="numberDecimal"
                 android:selectAllOnFocus="true"
                 tools:text="100"/>
@@ -103,14 +103,14 @@
         android:id="@+id/textInputLayoutCabbage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="visible">
+        android:visibility="visible"
+        android:hint="@string/ent_currency">
 
         <EditText
             android:id="@+id/editTextCabbage"
             style="@style/NotEditableEditText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/ent_currency" />
+            android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
 
 </LinearLayout>
