--- a/app/src/main/res/layout/activity_edit_account.xml
+++ b/app/src/main/res/layout/activity_edit_account.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <include
         android:id="@+id/include_toolbar"
         layout="@layout/common_toolbar"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
         android:layout_width="0dp"
@@ -29,108 +29,105 @@
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/textInputLayoutName"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:hint="@string/ent_name">
 
                 <EditText
                     android:id="@+id/editTextName"
                     style="@style/EditableEditText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/ent_name"/>
+                    android:layout_height="wrap_content" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:hint="@string/ent_type">
 
                 <EditText
                     android:id="@+id/editTextType"
                     style="@style/NotEditableEditText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/ent_type"/>
+                    android:layout_height="wrap_content" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/textInputLayoutCabbage"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:hint="@string/ent_currency">
 
                 <EditText
                     android:id="@+id/editTextCabbage"
                     style="@style/NotEditableEditText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/ent_currency"/>
+                    android:layout_height="wrap_content" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/textInputLayoutEmitent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:hint="@string/ent_emitent">
 
                 <EditText
                     android:id="@+id/editTextEmitent"
                     style="@style/EditableEditText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/ent_emitent"/>
+                    android:layout_height="wrap_content" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/textInputLayoutLast4Digits"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:hint="@string/ent_last4digits">
 
                 <EditText
                     android:id="@+id/editTextLast4Digits"
                     style="@style/EditableEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/ent_last4digits"
                     android:inputType="numberDecimal"
-                    android:maxLength="4"/>
+                    android:maxLength="4" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:hint="@string/ent_comment">
 
                 <EditText
                     android:id="@+id/editTextComment"
                     style="@style/EditableEditText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/ent_comment"/>
+                    android:layout_height="wrap_content" />
             </android.support.design.widget.TextInputLayout>
 
             <com.yoshione.fingen.widgets.AmountEditor
                 android:id="@+id/amountEditorStartBalance"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            </com.yoshione.fingen.widgets.AmountEditor><!--Start balance-->
+                android:layout_height="wrap_content" /><!--Start balance-->
 
             <com.yoshione.fingen.widgets.AmountEditor
                 android:id="@+id/amountEditorCreditLimit"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            </com.yoshione.fingen.widgets.AmountEditor>
+                android:layout_height="wrap_content" />
 
             <android.support.v7.widget.AppCompatCheckBox
                 android:id="@+id/checkboxAccountClosed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/ent_account_isclosed"
-                />
+                android:text="@string/ent_account_isclosed" />
 
         </LinearLayout>
     </ScrollView>
 
     <Button
         android:id="@+id/buttonSaveAccount"
-        app:layout_constraintBottom_toBottomOf="parent"
+        style="@style/BlueButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:text="@string/act_save"
-        style="@style/BlueButtonStyle" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 </android.support.constraint.ConstraintLayout>
