--- a/app/src/main/res/layout/activity_edit_transaction.xml
+++ b/app/src/main/res/layout/activity_edit_transaction.xml
@@ -32,28 +32,28 @@
                 android:id="@+id/textInputLayoutTemplateName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone">
+                android:visibility="gone"
+                android:hint="@string/ttl_template_name">
 
                 <EditText
                     android:id="@+id/editTextTemplateName"
                     style="@style/EditableEditText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/ttl_template_name" />
+                    android:layout_height="wrap_content" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/textInputLayoutSrcAmount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone">
+                android:visibility="gone"
+                android:hint="@string/ttl_src_transaction_amount">
 
                 <EditText
                     android:id="@+id/textViewSrcAmount"
                     style="@style/NotEditableEditText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/ttl_src_transaction_amount" />
+                    android:layout_height="wrap_content" />
             </android.support.design.widget.TextInputLayout>
 
             <LinearLayout
@@ -67,7 +67,8 @@
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:hint="@string/ent_date">
 
                     <EditText
                         android:id="@+id/editTextDate"
@@ -75,7 +76,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:hint="@string/ent_date"
                         tools:text="18 сентября 2015"
                         tools:ignore="TextFields" />
                 </android.support.design.widget.TextInputLayout>
@@ -83,7 +83,8 @@
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2">
+                    android:layout_weight="2"
+                    android:hint="@string/ent_time">
 
                     <EditText
                         android:id="@+id/te_ed_Time"
@@ -91,7 +92,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:hint="@string/ent_time"
                         tools:text="11:51" />
                 </android.support.design.widget.TextInputLayout>
 
@@ -100,14 +100,14 @@
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/textInputLayoutAccount"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:hint="@string/ent_account">
 
                 <EditText
                     android:id="@+id/textViewAccount"
                     style="@style/NotEditableEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/ent_account"
                     android:inputType="none|textNoSuggestions" />
             </android.support.design.widget.TextInputLayout><!--Account-->
             <!--</android.support.v7.widget.CardView>-->
@@ -134,14 +134,14 @@
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toStartOf="@+id/imageButtonDeleteCategory">
+                    android:layout_toStartOf="@+id/imageButtonDeleteCategory"
+                    android:hint="@string/ent_category">
 
                     <EditText
                         android:id="@+id/textViewCategory"
                         style="@style/NotEditableEditText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/ent_category"
                         android:inputType="textMultiLine|textNoSuggestions" />
                 </android.support.design.widget.TextInputLayout>
 
@@ -171,14 +171,14 @@
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/textInputLayoutExchangeRate"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:hint="@string/ent_exchange_rate">
 
                     <EditText
                         android:id="@+id/edit_text_exchange_rate"
                         style="@style/EditableEditText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/ent_exchange_rate"
                         android:inputType="numberDecimal"
                         android:selectAllOnFocus="true" />
                 </android.support.design.widget.TextInputLayout>
@@ -202,7 +202,8 @@
                     android:id="@+id/textInputLayoutSms"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toStartOf="@+id/imageButtonAddMarker">
+                    android:layout_toStartOf="@+id/imageButtonAddMarker"
+                    android:hint="@string/ttl_select_text_to_add_marker">
 
                     <com.yoshione.fingen.widgets.SmsEditText
                         android:id="@+id/te_tv_sms"
@@ -212,7 +213,6 @@
                         android:cursorVisible="true"
                         android:enabled="true"
                         android:focusable="true"
-                        android:hint="@string/ttl_select_text_to_add_marker"
                         android:inputType="none"
                         android:singleLine="false"
                         android:textIsSelectable="true" />
@@ -239,14 +239,14 @@
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toStartOf="@+id/imageButtonDeleteProject">
+                    android:layout_toStartOf="@+id/imageButtonDeleteProject"
+                    android:hint="@string/ent_project">
 
                     <EditText
                         android:id="@+id/textViewProject"
                         style="@style/NotEditableEditText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/ent_project"
                         tools:text="Проект"/>
                 </android.support.design.widget.TextInputLayout>
 
@@ -266,14 +266,14 @@
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toStartOf="@+id/imageButtonDeleteDebt">
+                    android:layout_toStartOf="@+id/imageButtonDeleteDebt"
+                    android:hint="@string/ent_debt">
 
                     <EditText
                         android:id="@+id/textViewSimpleDebt"
                         style="@style/NotEditableEditText"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/ent_debt" />
+                        android:layout_height="wrap_content" />
                 </android.support.design.widget.TextInputLayout>
 
                 <ImageButton
@@ -292,14 +292,14 @@
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toStartOf="@+id/imageButtonDeleteDepartment">
+                    android:layout_toStartOf="@+id/imageButtonDeleteDepartment"
+                    android:hint="@string/ent_department">
 
                     <EditText
                         android:id="@+id/textViewDepartment"
                         style="@style/NotEditableEditText"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/ent_department" />
+                        android:layout_height="wrap_content" />
                 </android.support.design.widget.TextInputLayout>
 
                 <ImageButton
@@ -318,14 +318,14 @@
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toStartOf="@+id/imageButtonDeleteLocation">
+                    android:layout_toStartOf="@+id/imageButtonDeleteLocation"
+                    android:hint="@string/ent_location">
 
                     <EditText
                         android:id="@+id/textViewLocation"
                         style="@style/NotEditableEditText"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/ent_location" />
+                        android:layout_height="wrap_content" />
                 </android.support.design.widget.TextInputLayout>
 
                 <ImageButton
@@ -338,14 +338,14 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:hint="@string/ent_comment">
 
                 <EditText
                     android:id="@+id/editTextComment"
                     style="@style/EditableEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/ent_comment"
                     android:inputType="textCapSentences|textMultiLine" />
             </android.support.design.widget.TextInputLayout>
 
