--- a/app/src/main/res/layout/frg_te_dest_account.xml
+++ b/app/src/main/res/layout/frg_te_dest_account.xml
@@ -4,13 +4,13 @@
 <android.support.design.widget.TextInputLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:hint="@string/ent_dest_account">
 
     <EditText
         android:id="@+id/textViewDestAccount"
         style="@style/NotEditableEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/ent_dest_account"
         android:inputType="none|textNoSuggestions" />
 </android.support.design.widget.TextInputLayout>
