--- a/app/src/main/res/layout/widget_file_selector.xml
+++ b/app/src/main/res/layout/widget_file_selector.xml
@@ -7,14 +7,14 @@
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:hint="@string/ent_path_to_file">
 
         <EditText
             android:id="@+id/editTextFileName"
             style="@style/NotEditableEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/ent_path_to_file"
             android:inputType="textMultiLine"/>
     </android.support.design.widget.TextInputLayout>
 
